Tue  5 Jun 2012 22:23:00 BST - Release 1.02
 Fix forwarded REST methods, e.g. foo_GET to be more
 correctly displayed as a forward in the stats info.

 Make public response building methods for errors
 _unsupported_media_type and _serialize_bad_request which
 can be extended from an action-role to return custom
 error response.

Tue  29 May 2012 20:19:00 BST - Release 1.01
 Add Catalyst::Action::Deserialize::JSON::XS

 Fix JSON::XS useage to depend on JSON.pm v2.0, and rely on the
 fact that can be backed by XS code, by explicitly setting
 $ENV{'PERL_JSON_BACKEND'} = 2

Fri  13 Apr 2012 09:31:00 BST - Release 1.00
  Repack without auto_include to stop Module::Install inlining
  Test::More without Test::Builder. RT#76524

Tue  28 Feb 2012 09:09:00 GMT - Release 0.99
  Repack with new Module::Install to stop depending on an unnecessary
  ExtUtils::MakeMaker version.

Tue  21 Feb 2012 11:40:00 GMT - Release 0.98
  More fixes as per last release.

Tue  21 Feb 2012 09:58:00 GMT - Release 0.97
  Fix test with latest Catalyst version which passes _log into
  requests.

Mon  20 Jan 2012 11:22:00 GMT - Release 0.96
  Added fix for RT 63537 (from Gerv) and tests to check it.

Wed  04 Jan 2012 19:34:00 GMT - Release 0.95
  Fix regex for JSONP parameter name to be able to include the . character
  in Catalyst::Action::Serialize::JSONP. RT#73741

  Add optional location parameter to status_accepted handler. RT#73691 (ghenry)

Fri  09 Dec 2011 08:35:00 GMT - Release 0.94
  Add 403 Forbidden and 302 Not Found status methods to
  Catalyst::Controller::REST (Caleb Cushing)

Wed  12 Oct 2011 11:37:00 CDT - Release 0.93
  Add a "Callback" serializer/deserializer to allow for more customization in
  how the REST data is parsed/generated (bphillips)

Sat  01 Oct 2011 11:04:00 BST - Release 0.92
  Add a Catalyst::Action::DeserializeMultiPart, allowing one part of a multipart
  request to be deserialized as the REST data (allowing other parts to be used for